fix navbar collapse color

--- a/public/assets/css/landingPage.css
+++ b/public/assets/css/landingPage.css
@@ -80,6 +80,7 @@ Resset Css
   .navbar .container .navbar-collapse {
     position: fixed;
     z-index: 100;
+    background-color: #393939;
     box-shadow: 0px -70px 80px rgba(0, 0, 0, 0.0243888), 0px -21.103px 24.1177px rgba(0, 0, 0, 0.035), 0px -8.76509px 10.0172px rgba(0, 0, 0, 0.0456112), 0px -3.17016px 3.62304px rgba(0, 0, 0, 0.07);
     top: 0;
     width: 0%;
